[package]
name = "turbine"
version = "0.1.0"
authors = ["Travis Sturzl <travissturzl@gmail.com>"]
edition = "2018"
description = "A flash sympathetic data stream, leveraging io_uring(requires Linux kernel 5.6+) for fast asynchronous IO."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.6"
rio = "0.9.4"
tokio = { version = "1", features = ["full"] }
byteorder = "1.3.4"
parking_lot = "0.11.1"
